--- a/moon.html
+++ b/moon.html
@@ -5,7 +5,7 @@
 </head>  
 <body style="background-color:#ffcc66">
 
-<center><h1 styl="color:#6666ff">乾爹和麥當勞叔叔</h1></center>
+<center><h1 style="color:#6666ff">乾爹和麥當勞叔叔</h1></center>
 <center><img src="http://i.imgur.com/0mszE3lh.jpg" width=500"></center>
 
 </body>
