--- a/moon.html
+++ b/moon.html
@@ -7,6 +7,15 @@
 
 <center><h1 style="color:#6666ff">乾爹和麥當勞叔叔</h1></center>
 <center><img src="http://i.imgur.com/0mszE3lh.jpg" width=500"></center>
+<p>
+<address>
+Written by ET.<br> 
+Visit us at:<br>
+moonlightstar.github.io/moon.html<br>
+Box 564, Disneyland<br>
+TW
+</address>
+</p>
 
 </body>
 
