--- a/moon.html
+++ b/moon.html
@@ -11,7 +11,7 @@
 <address>
 Written by ET.<br> 
 Visit us at:<br>
-moonlightstar.github.io/moon.html<br>
+<a href="http://moonlightstar.github.io/moon.html"> This link </a><br>
 Box 564, Disneyland<br>
 TW
 </address>
