--- a/moon.html
+++ b/moon.html
@@ -7,6 +7,10 @@
 
 <center><h1 style="color:#6666ff">乾爹和麥當勞叔叔</h1></center>
 <center><img src="http://i.imgur.com/0mszE3lh.jpg" width=500"></center>
+<p title="關於乾爹">
+乾爹生於:高雄
+本名:蔡博宇
+綽號:菜脯
 <p>
 <address>
 Written by ET.<br> 
