--- a/moon.html
+++ b/moon.html
@@ -8,9 +8,9 @@
 <center><h1 style="color:#6666ff">乾爹和麥當勞叔叔</h1></center>
 <center><img src="http://i.imgur.com/0mszE3lh.jpg" width=500"></center>
 <p title="關於乾爹"><center>
-乾爹生於:高雄
-本名:蔡博宇
-綽號:菜脯
+乾爹生於:高雄<br>
+本名:蔡博宇<br>
+綽號:菜脯<br>
 </p></center><br>
 <p>
 <address>
