--- a/moon.html
+++ b/moon.html
@@ -16,7 +16,7 @@
 <address>
 Written by ET.<br> 
 Visit us at:<br>
-<a href="http://moonlightstar.github.io/moon.html"> This link </a><br>
+<a href="http://moonlightstar.github.io/moon.html"autostart=true hidden=true loop=true> This link </a><br>
 Box 564, Disneyland<br>
 TW
 </address>
