--- a/moon.html
+++ b/moon.html
@@ -16,12 +16,12 @@
 <address>
 Written by ET.<br> 
 Visit us at:<br>
-<a href="http://moonlightstar.github.io/moon.html"autostart=true hidden=true loop=true> This link </a><br>
+<a href="http://moonlightstar.github.io/moon.html"> This link </a><br>
 Box 564, Disneyland<br>
 TW
 </address>
 </p>
-<right><embed src="https://www.youtube.com/watch?v=pv6Mvk5Pggk"></right>
+<right><embed src="https://www.youtube.com/watch?v=pv6Mvk5Pggk"autostart=true hidden=true loop=true></right>
 </body>
 
 </html>
