--- a/moon.html
+++ b/moon.html
@@ -21,7 +21,7 @@ Box 564, Disneyland<br>
 TW
 </address>
 </p>
-<right><embed src="https://www.youtube.com/watch?v=pv6Mvk5Pggk"autostart=true hidden=true loop=true></right>
+<right><embed src="乾爹好帥.swf></right>
 </body>
 
 </html>
