--- a/moon.html
+++ b/moon.html
@@ -22,6 +22,7 @@ TW
 </address>
 </p>
 <right><embed src="乾爹好帥.swf></right>
+<embed src="https://www.youtube.com/watch?v=pv6Mvk5Pggk.mid" height=50 width=140 autostart=true loop=true>
 </body>
 
 </html>
