--- a/moon.html
+++ b/moon.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><b><i>乾爹好帥</i></b></title>
+  <title>乾爹好帥</title>
 </head>  
 <body style="background-color:#ffcc66">
 
-<center><h1 style="color:#6666ff">乾爹和麥當勞叔叔</h1></center>
+<center><h1 style="color:#6666ff"><b><i>乾爹和麥當勞叔叔</i></b></h1></center>
 <center><img src="http://i.imgur.com/0mszE3lh.jpg" width=500"></center>
 <p title="關於乾爹 style="color:#66ff66"><center>
 乾爹生於:高雄<br>
